--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "voku/arrayy",
+  "name": "parfumix/arrayy",
   "description": "Array manipulation library for PHP, called Arrayy!",
   "keywords": [
     "array",
